# painting-place

./: README.md
backend/: Cargo.toml
frontend/: .eslintcache  package-lock.json  package.json
frontend/pages/: index.js
frontend/public/: index.html
frontend/src/: App.tsx  Box.tsx
frontend/src/components/: Box.tsx
frontend/src/utils/: Box.tsx
painting-place-backend/: Cargo.toml
painting-place-backend/src/: event_broadcast.rs  events.rs  lib.rs  player.rs  stroke.rs
painting-place-frontend/: index.html
painting-place-frontend/js/: script.js
